--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,19 +7,12 @@ COPY src ./src
 
 ARG TARGETOS=linux
 ARG TARGETARCH=amd64
-ARG TARGETVARIANT
 ARG VERSION=dev
 
 # Build a static binary for the target platform.
-# Note: GOARM is only relevant for GOARCH=arm (e.g. linux/arm/v7).
 RUN set -eu; \
     cd src; \
-    GOARM=""; \
-    if [ "${TARGETARCH}" = "arm" ]; then \
-      # TARGETVARIANT is like "v7" for linux/arm/v7.
-      GOARM="${TARGETVARIANT#v}"; \
-    fi; \
-    CGO_ENABLED=0 GOOS="${TARGETOS}" GOARCH="${TARGETARCH}" ${GOARM:+GOARM="${GOARM}"} \
+    CGO_ENABLED=0 GOOS="${TARGETOS}" GOARCH="${TARGETARCH}" \
       go build -trimpath -buildvcs=false \
         -ldflags="-s -w -X main.version=${VERSION}" \
         -o /conntrack-exporter ./cmd/conntrack-exporter
@@ -29,7 +22,7 @@ FROM scratch
 
 COPY --from=build /conntrack-exporter /conntrack-exporter
 
-EXPOSE 9100
+EXPOSE 9095
 
 ENTRYPOINT ["/conntrack-exporter"]
 
