--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -7,17 +7,12 @@ COPY src ./src
 
 ARG TARGETOS=linux
 ARG TARGETARCH=amd64
-ARG TARGETVARIANT
 ARG VERSION=dev
 
 # Build a static binary for the target platform.
 RUN set -eu; \
     cd src; \
-    GOARM=""; \
-    if [ "${TARGETARCH}" = "arm" ]; then \
-      GOARM="${TARGETVARIANT#v}"; \
-    fi; \
-    CGO_ENABLED=0 GOOS="${TARGETOS}" GOARCH="${TARGETARCH}" ${GOARM:+GOARM="${GOARM}"} \
+    CGO_ENABLED=0 GOOS="${TARGETOS}" GOARCH="${TARGETARCH}" \
       go build -trimpath -buildvcs=false \
         -ldflags="-s -w -X main.version=${VERSION}" \
         -o /conntrack-exporter ./cmd/conntrack-exporter
@@ -27,6 +22,6 @@ FROM alpine:3.23.2
 
 COPY --from=build /conntrack-exporter /conntrack-exporter
 
-EXPOSE 9100
+EXPOSE 9095
 
 ENTRYPOINT ["/conntrack-exporter"]
